<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_sort_mainview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialot_sort_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:focusable="false"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/dialog_sort_title"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/dialog_title_textsize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/dialog_sort_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:checked="true"
                android:text="@string/dialog_sort_ascending"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/dialog_sort_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_descending"
                android:textSize="18sp"/>
        </RadioGroup>

        <View
            android:id="@+id/dialog_info_view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_divider_size"
            android:layout_marginBottom="@dimen/divider_margin"
            android:layout_marginTop="@dimen/divider_margin"
            android:background="@color/colorPrimaryDark"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/dialog_sort_byChecking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_sort_byChecking"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/dialog_sort_byName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_byName"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/dialog_sort_byPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_byPrice"
                android:textSize="18sp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/dialog_cancel_button"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/dialog_title_textsize"/>

        <View
            android:layout_width="@dimen/dialog_divider_size"
            android:layout_height="match_parent"
            android:background="@color/colorAccentSecondary"/>

        <TextView
            android:id="@+id/dialog_button_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/dialog_ok_button"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/dialog_title_textsize"/>

    </LinearLayout>
</LinearLayout>