<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_mainview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_info_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:focusable="false"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/dialog_info_title"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/dialog_title_textsize"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_info_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tyan.hainee.shoppinglist.ui.widget.MultilineEditText
                android:id="@+id/dialog_info_edittext_shopname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/dialog_info_shop_name_hint"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textCapSentences"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/dialog_info_view_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_divider_size"
            android:layout_below="@id/dialog_info_textinputlayout"
            android:layout_marginBottom="@dimen/divider_margin"
            android:layout_marginTop="@dimen/divider_margin"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/dialog_info_shopping_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_info_view_divider"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/dialog_info_datepicker_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/dialog_info_today_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/dialog_info_shopping_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/dialog_info_today_button"
            android:textColor="@color/colorPrimaryDark"/>

        <DatePicker
            android:id="@+id/dialog_info_datepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_info_shopping_date"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/dialog_cancel_button"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/dialog_title_textsize"/>

        <View
            android:layout_width="@dimen/dialog_divider_size"
            android:layout_height="match_parent"
            android:background="@color/colorAccentSecondary"/>

        <TextView
            android:id="@+id/dialog_button_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/dialog_ok_button"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/dialog_title_textsize"/>

    </LinearLayout>
</LinearLayout>